# termboy

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: audit.yml  release.yml
assets/: demo.tape
crates/termboy/: Cargo.toml
crates/termboy-core/: Cargo.toml
crates/termboy-core/src/: lib.rs  state.rs
crates/termboy-gb/: Cargo.toml
crates/termboy-gb/src/: apu.rs  bus.rs  cartridge.rs  joypad.rs  lib.rs  mbc1.rs  mbc3.rs  mbc5.rs  serial.rs  timer.rs
crates/termboy-gb/src/cpu/: execute.rs  mod.rs  registers.rs  tests.rs
crates/termboy-gb/src/ppu/: mod.rs  render.rs  tests.rs
crates/termboy-gb/tests/: acid2.rs  blargg.rs  save_state.rs
crates/termboy-gba/: Cargo.toml
crates/termboy-gba/examples/: throughput.rs
crates/termboy-gba/src/: apu.rs  bios.rs  bus.rs  color.rs  dma.rs  eeprom.rs  flash.rs  keypad.rs  lib.rs  ppu.rs  save.rs  timers.rs  timing.rs
crates/termboy-gba/src/cpu/: arm.rs  mod.rs  psr.rs  registers.rs  tests.rs  thumb.rs
crates/termboy-gba/src/ppu/: bg.rs  mod.rs  obj.rs  tests.rs
crates/termboy-gba/tests/: boot_smoke.rs  core_e2e.rs  jsmolka.rs  ppu_golden.rs  save_state.rs  timing.rs
crates/termboy/src/: audio.rs  capture.rs  config.rs  input.rs  kitty.rs  main.rs  menu.rs  pause.rs  playback.rs  rewind.rs  screen.rs  thumb.rs
packaging/homebrew/: termboy.rb
roms/: README.md
scripts/: fetch-mgba-suite.sh  fetch-test-roms.sh
