[package]
name = "termboy-core"
description = "Shared core abstractions (save-state serialization, framebuffer) for the termboy terminal emulator."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true
