[package]
name = "termboy-gba"
description = "Game Boy Advance emulation core (ARM7TDMI, PPU, DMA, audio, HLE BIOS) behind termboy."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
termboy-core = { path = "../termboy-core", version = "0.4.0" }
