[package]
name = "termboy"
version = "0.2.2"
edition.workspace = true

[dependencies]
termboy-core = { path = "../termboy-core" }
termboy-gb = { path = "../termboy-gb" }
termboy-gba = { path = "../termboy-gba" }
crossterm = "0.29"
cpal = "0.16"
miniz_oxide = "0.8" # zlib for the kitty graphics protocol's o=z compression
